[gd_scene load_steps=3 format=3 uid="uid://b1cres3csc1nw"]

[ext_resource type="Script" path="res://scripts/menus/options_menu.gd" id="1_sov7u"]
[ext_resource type="PackedScene" uid="uid://brgfqbfpotjld" path="res://scenes/menus/menu_music_player.tscn" id="2_sacaw"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sov7u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SoundVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="SoundVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sound Volume"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
text = "Main Menu"

[node name="MenuMusicPlayer" parent="." instance=ExtResource("2_sacaw")]

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
